--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 
 </head>
 <body>
-<header>
-<h1>Post-It</h1>
-<input type="button" value="Ajouter un Post-It" id="btn-addNote" />
-</header>
-<div id="board">
+
+<div class="contener">
+
 </div>
 
-<script type="text/javascript" src="./js/post_it_general.js"></script>
+
+<script type="text/javascript" src="./js/post_it_class.js"></script>
 </body>
 </html>
