--- a/POST-IT/index.html
+++ b/POST-IT/index.html
@@ -8,17 +8,21 @@
 
 </head>
 <body>
+    <script type="text/javascript" src="./js/post_it_class.js" defer></script>
+    <script type="text/javascript" src="./js/post_it_general.js" defer></script>
+
     <header>
 <h1>POST IT</h1>
 
 
     </header>
 
-<div class="contener">
+<div id="contener">
 
 </div>
 
 
-<script type="text/javascript" src="./js/post_it_class.js"></script>
+
+
 </body>
 </html>
