--- a/POST-IT/index.html
+++ b/POST-IT/index.html
@@ -13,9 +13,14 @@
 
     <header>
 <h1>POST IT</h1>
+<div id="boutons">
+<button onclick="post_itPlusjaune()"id="bout1">Nouveau Post it</button>
+<button onclick="post_itPlusrose()" id="bout2">Nouveau Post it</button>
+<button onclick="post_itPlusvert()" id="bout3">Nouveau Post it</button>
+    </div> 
 
 
-    </header>
+</header>
 
 <div id="contener">
 
