--- a/POST-IT/index.html
+++ b/POST-IT/index.html
@@ -5,24 +5,19 @@
 <meta charset="utf-8" />
 <title>Post_it</title>
 <link rel="stylesheet" rev="stylesheet" href="./css/post_it.css">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 </head>
 <body>
     <script type="text/javascript" src="./js/post_it_class.js" defer></script>
     <script type="text/javascript" src="./js/post_it_general.js" defer></script>
 
     <header>
-<h1>POST IT</h1>
-<div id="boutons">
-<button onclick="post_itPlusjaune()"id="bout1">Nouveau Post it</button>
-<button onclick="post_itPlusrose()" id="bout2">Nouveau Post it</button>
-<button onclick="post_itPlusvert()" id="bout3">Nouveau Post it</button>
-    </div> 
+<h1>AJOUTER UN POST IT</h1>
 
 
 </header>
 
-<div id="contener">
+
 
 </div>
 
