--- a/POST-IT/index.html
+++ b/POST-IT/index.html
@@ -12,8 +12,12 @@
     <script type="text/javascript" src="./js/post_it_general.js" defer></script>
 
     <header>
-<h1>AJOUTER UN POST IT</h1>
-
+<h1>TABLEAU DE POST IT</h1>
+<div id="bout">
+<button id="boutplusJ">J +</button>
+<button id="boutplusR">R +</button>
+<button id="boutplusB">B +</button>
+</div>
 
 </header>
 
